src/pages/Notebooks/components/notebookOpenUI/NotebookPage.module.css
.flashcardContainer {
    position: fixed;
    display: flex;
    justify-content: center;
    align-items: center;
    z-index: 100;

    width: 100vw;
    height: 100vh;

    margin-top: -5.5vw;

    background: rgba(64, 64, 64, 0.8);
}

.exitButton {
    position: fixed;
    top: 5%;
    right: 5%;
    width: 3vw;
    height: 3vw;

    cursor: pointer;
    transition: all 400ms ease;
}

.exitButton circle {
    fill: rgb(246, 106, 106, 1.0);
}

.exitButton:hover {
    transform: scale(0.97);

}

.button {
    cursor: pointer;
    width: clamp(5px, 3.7vw,150px);
    height: clamp(5px, 3.7vw,150px);
    position: relative;
}

.button path {
    fill: var(--bg-secondary);
    
}

@media (max-width: 1024px) {
    .flashcardContainer {
        margin-top: -18vw;
        touch-action: none;
        overscroll-behavior: none;
        overflow: hidden;
    }

    .exitButton {
        width: 11vw;
        height: 11vw;
        top: 1%;
        z-index: 1000;
    }

    .button {
        width: clamp(5px, 14vw,250px);
        height: clamp(5px, 14vw,250px);
        position: absolute;
        z-index: 10000;
    }
    
    .button:nth-child(3) {
        top: 8%;
        right: 3%;
        transform: rotate(180);
    }

    .button:nth-child(1) {
        top: 8%;
        left: 3%;
    }

    
}

